Changed pom.xml and edited ProductDesciption.java class

--- a/test-output/old/Sauce Demo App Test Automation Suite/methods-alphabetical.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/methods-alphabetical.html
@@ -1,34 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sauce Demo App Test Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">addToCartTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>21/08/18 21:48:26</td>   <td>-5771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@548e6d58]">imageTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>21/08/18 21:48:26</td>   <td>-5721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@548e6d58]">loginPageTitleTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>21/08/18 21:48:26</td>   <td>-5715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@548e6d58]">loginTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:42</td>   <td>10077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">removeFromCart</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:49:15</td>   <td>42354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">selectAProduct</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>21/08/18 21:48:25</td>   <td>-7078</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@548e6d58]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:30</td>   <td>-2286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>21/08/18 21:48:31</td>   <td>-1147</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@a1cdc6d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>21/08/18 21:48:30</td>   <td>-2442</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@548e6d58]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:49:28</td>   <td>55380</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:54</td>   <td>22145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">validateMenuOptionsTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:32</td>   <td>-124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">validateSortingTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:32</td>   <td>-229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">verifyFilterOptionsTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>21/08/18 21:48:31</td>   <td>-1152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@623a8092]">verifyProductListTitleTest</td> 
-  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:22:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">addToCartTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-18043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">imageTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-17984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginPageTitleTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-17976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:22:28</td>   <td>20233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">removeFromCart</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:22:17</td>   <td>10084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">removeFromCartTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:22:45</td>   <td>37470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">selectAProduct</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/25 20:21:45</td>   <td>-22217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:21:53</td>   <td>-14045</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:21:55</td>   <td>-12416</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/25 20:21:53</td>   <td>-14708</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>37411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:22:48</td>   <td>40503</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateAddToCartTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:22:40</td>   <td>32276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateBackToProductsTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateImageDisplayedTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:22:40</td>   <td>32478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateMenuOptionsTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateProductTitleTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>-10327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateSortingTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>37298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateYourCartTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>-10491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyFilterOptionsTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/25 20:21:55</td>   <td>-12421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyProductListTitleTest</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
 </table>
