--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:47:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">removeFromCartTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:47:41</td>   <td>-12973</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:48:04</td>   <td>10429</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:47:44</td>   <td>-10161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">validateAddToCartTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:48:04</td>   <td>10131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">validateBackToProductsTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:47:44</td>   <td>-10275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">validateImageDisplayedTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:47:44</td>   <td>-10198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">validateProductTitleTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/18 21:48:04</td>   <td>10330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@41005828]">validateYourCartTest</td> 
-  <td>main@57241990</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">imageTest</td> 
+  <td>main@2694936</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">loginPageTitleTest</td> 
+  <td>main@2694936</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">loginTest</td> 
+  <td>main@2694936</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>21/08/25 17:30:28</td>   <td>-2507</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2694936</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>21/08/25 17:30:34</td>   <td>3497</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2694936</td>   <td></td> </tr>
 </table>
