--- a/test-output/old/Sauce Demo App Test Automation Suite/methods-alphabetical.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/methods-alphabetical.html
@@ -1,48 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sauce Demo App Test Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">addToCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-18043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">imageTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-17984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginPageTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>-17976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:28</td>   <td>20233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">removeFromCart</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:17</td>   <td>10084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">removeFromCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:45</td>   <td>37470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">selectAProduct</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:45</td>   <td>-22217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:53</td>   <td>-14045</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:55</td>   <td>-12416</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:53</td>   <td>-14708</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>37411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:48</td>   <td>40503</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateAddToCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:40</td>   <td>32276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateBackToProductsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateImageDisplayedTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:40</td>   <td>32478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateMenuOptionsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>-10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateProductTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>-10327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateSortingTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>37298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateYourCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>-10491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyFilterOptionsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:55</td>   <td>-12421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyProductListTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">addToCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>-6108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">imageTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>-6047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginPageTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>-6042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">removeFromCart</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:39</td>   <td>24288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">removeFromCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:22</td>   <td>7044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">selectAProduct</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:07</td>   <td>-8071</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:13</td>   <td>-2043</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:27</td>   <td>12297</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:12</td>   <td>-2740</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:27</td>   <td>12202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>34579</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>14153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateAddToCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>34375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateBackToProductsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>14057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateImageDisplayedTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:17</td>   <td>2263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateMenuOptionsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>14112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateProductTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>-191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateSortingTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>34492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateYourCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>-388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyFilterOptionsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>-420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyProductListTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
 </table>
