--- a/test-output/old/Sauce Demo App Test Automation Suite/methods.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/methods.html
@@ -1,48 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sauce Demo App Test Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>4174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">imageTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>4233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginPageTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:49</td>   <td>4241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">loginTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/25 20:21:53</td>   <td>7509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:53</td>   <td>8172</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:55</td>   <td>9796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyProductListTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:55</td>   <td>9801</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>11650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateImageDisplayedTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>11726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">verifyFilterOptionsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>11850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateProductTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:21:57</td>   <td>11890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateSortingTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:21:57</td>   <td>12088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateAddToCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:07</td>   <td>22217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">addToCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:17</td>   <td>32301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">removeFromCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:28</td>   <td>42450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">removeFromCart</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:40</td>   <td>54493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateBackToProductsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:40</td>   <td>54695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">validateMenuOptionsTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>59515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">validateYourCartTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>21/08/25 20:22:45</td>   <td>59628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:45</td>   <td>59687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">selectAProduct</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/25 20:22:48</td>   <td>62720</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@77caeb3e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>1963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">imageTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>2024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginPageTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>2029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>21/08/26 10:06:12</td>   <td>5331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:13</td>   <td>6028</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>7651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyProductListTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>7683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyFilterOptionsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>7880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateSortingTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">addToCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>8233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">removeFromCart</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:17</td>   <td>10334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateMenuOptionsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:22</td>   <td>15115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">selectAProduct</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>21/08/26 10:06:27</td>   <td>20273</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:27</td>   <td>20368</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateImageDisplayedTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateProductTitleTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateAddToCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:39</td>   <td>32359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">removeFromCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateBackToProductsTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateYourCartTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
 </table>
