--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9caaeb">  <td>21/08/25 17:30:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2694936</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>2507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">imageTest</td> 
-  <td>main@2694936</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>2580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">loginPageTitleTest</td> 
-  <td>main@2694936</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/25 17:30:31</td>   <td>2591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">loginTest</td> 
-  <td>main@2694936</td>   <td></td> </tr>
-<tr bgcolor="9caaeb">  <td>21/08/25 17:30:34</td>   <td>6004</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@7b8b43c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2694936</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YourCartPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:31</td>   <td>3862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateTitleDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateTitleDisplayedTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:32</td>   <td>3891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateSizeAndItemsInCartTest()[pri:2, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateSizeAndItemsInCartTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:32</td>   <td>3950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateRemoveProductTest()[pri:3, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateRemoveProductTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:32</td>   <td>3951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateReturnShoppingTest()[pri:4, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateReturnShoppingTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:32</td>   <td>4027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateCheckOutTest()[pri:5, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateCheckOutTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/26 22:49:35</td>   <td>7121</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YourCartPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
 </table>
