--- a/test-output/old/Sauce Demo App Test Automation Suite/methods.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/methods.html
@@ -1,48 +1,62 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sauce Demo App Test Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>21/08/26 10:06:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>1963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">imageTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>2024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginPageTitleTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/26 10:06:09</td>   <td>2029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">loginTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>21/08/26 10:06:12</td>   <td>5331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@3e6fa38a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:13</td>   <td>6028</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>7651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyProductListTitleTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:14</td>   <td>7683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">verifyFilterOptionsTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>7880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateSortingTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">addToCartTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:15</td>   <td>8233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">removeFromCart</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:17</td>   <td>10334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">validateMenuOptionsTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:22</td>   <td>15115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">selectAProduct</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>21/08/26 10:06:27</td>   <td>20273</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@66a3ffec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:27</td>   <td>20368</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateImageDisplayedTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateProductTitleTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:29</td>   <td>22224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateAddToCartTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:39</td>   <td>32359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">removeFromCartTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateBackToProductsTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">validateYourCartTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>21/08/26 10:06:49</td>   <td>42650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@6eebc39e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/26 22:52:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@77caeb3e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/26 22:52:22</td>   <td>2106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.imageTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@77caeb3e]">imageTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/26 22:52:22</td>   <td>2167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@77caeb3e]">loginPageTitleTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/26 22:52:22</td>   <td>2172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@77caeb3e]">loginTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>21/08/26 22:52:26</td>   <td>5410</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.LoginPageTest@77caeb3e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:26</td>   <td>6083</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:28</td>   <td>7994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">verifyProductListTitleTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:28</td>   <td>7999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">verifyFilterOptionsTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:28</td>   <td>8119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">validateSortingTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:29</td>   <td>8295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">addToCartTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:29</td>   <td>8461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">removeFromCart</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:31</td>   <td>10556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">validateMenuOptionsTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:37</td>   <td>16638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">selectAProduct</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>21/08/26 22:52:42</td>   <td>21739</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:52:42</td>   <td>21842</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductDescriptionPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:52:44</td>   <td>23761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateImageDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">validateImageDisplayedTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:52:44</td>   <td>23804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateProductTitleTest()[pri:2, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">validateProductTitleTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:52:44</td>   <td>23834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateAddToCartTest()[pri:3, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">validateAddToCartTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:52:54</td>   <td>33966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.removeFromCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">removeFromCartTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:53:04</td>   <td>44085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateBackToProductsTest()[pri:5, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">validateBackToProductsTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:53:05</td>   <td>44255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductDescriptionPageTest.validateYourCartTest()[pri:6, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">validateYourCartTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>21/08/26 22:53:05</td>   <td>44373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductDescriptionPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductDescriptionPageTest@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:05</td>   <td>44445</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YourCartPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:07</td>   <td>46427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateTitleDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">validateTitleDisplayedTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:07</td>   <td>46439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateSizeAndItemsInCartTest()[pri:2, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">validateSizeAndItemsInCartTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:07</td>   <td>46490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateRemoveProductTest()[pri:3, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">validateRemoveProductTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:07</td>   <td>46491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateReturnShoppingTest()[pri:4, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">validateReturnShoppingTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:07</td>   <td>46566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateCheckOutTest()[pri:5, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">validateCheckOutTest</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>21/08/26 22:53:10</td>   <td>49645</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YourCartPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@14bf9759]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
 </table>
